--- a/Tests.rmd
+++ b/Tests.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tests"
+title: "StochOptim: A R Wrapper for stocastic Optimisation"
 output: github_document
 ---
 
@@ -11,14 +11,14 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Test 1
 Prepare R code for three of the unconstrained test functions in [GO Test Problems](http://www-optima.amp.i.kyoto-u.ac.jp/member/student/hedar/Hedar_files/TestGO.htm) that allow dimension greater than 4
 
-* **Rosenbrock**
+* **Rosenbrock Function**
 ```{r}
 Rosenbrock<-function(x){
   len<-length(x)
   sum((100*(x[-len]^2-x[-1])^2) + (x[-len]-rep(1, len-1))^2)
 }
 
-#gradient function
+#gradient function for Rosenbrock function
 Rosenbrock.g<-function(x){
   len<-length(x)
   g<-rep(NA, len)
@@ -29,7 +29,7 @@ Rosenbrock.g<-function(x){
 }
 Rosenbrock(c(1,2,3,4))
 ```
-* **Sphere Func.**
+* **Sphere Function**
 ```{r}
 sphere<-function(x){
   sp<-sum(x^2)
@@ -39,7 +39,7 @@ sphere<-function(x){
   sp
 }
 
-#gradient function
+#gradient function for sphere function
 sphere.g<-function(x){
   len<-length(x)
   g<-rep(NA, len)
@@ -49,7 +49,7 @@ sphere.g<-function(x){
 
 sphere(c(1,2,3,4))
 ```
-* **Sum square**
+* **Sum Squares Function**
 ```{r}
 sum_sq<-function(x){
   len<-length(x)
@@ -58,7 +58,7 @@ sum_sq<-function(x){
   ans
 }
 
-#gradient function
+#gradient function for sum square function
 sum_sq.g<-function(x){
   len<-length(x)
   g<-rep(NA, len)
@@ -68,7 +68,7 @@ sum_sq.g<-function(x){
 
 sum_sq(c(1,2,3,4))
 ```
-* **Dixon&Price**
+* **Dixon&Price Function**
 ```{r}
 d_and_p<-function(x){
   len<-length(x)
@@ -77,7 +77,7 @@ d_and_p<-function(x){
   t1+t2
 }
 
-#gradient function
+#gradient function for dixon&price function
 d_and_p.g<-function(x){
   len<-length(x)
   g<-rep(NA, len)
@@ -164,7 +164,8 @@ Choose at least three stochastic optimization solvers from the suggestions in Gl
 require(DEoptim)
 ```
 
-* **Rosenbrock**
+#### Optimising above function using DEoptim package.
+* **Rosenbrock Function**
 ```{r}
 #Rosenbrock
 set.seed(1231)
@@ -173,7 +174,7 @@ DEoptim_1 <- DEoptim(Rosenbrock, lower=c(-10,-10,-10), upper=c(10,10, 10), DEopt
 plot(DEoptim_1)
 ```
 
-* **Sphere**
+* **Sphere Function**
 ```{r}
 #sphere
 set.seed(1232)
@@ -182,7 +183,7 @@ DEoptim_2 <- DEoptim(sphere, lower=c(-10,-10,-10), upper=c(10,10, 10), DEoptim.c
 plot(DEoptim_2)
 ```
 
-* **Sum Square**
+* **Sum Square Function**
 ```{r}
 #sum square
 set.seed(1233)
@@ -191,7 +192,7 @@ DEoptim_3 <- DEoptim(sum_sq, lower=c(-10,-10,-10), upper=c(10,10, 10), DEoptim.c
 plot(DEoptim_3)
 ```
 
-* **Dixon&Price**
+* **Dixon&Price Function**
 ```{r}
 #dixon&price
 set.seed(1234)
@@ -218,7 +219,8 @@ plot(DEoptim_4)
 require(ABCoptim)
 ```
 
-* **Rosenbrock**
+####Optimising above function using ABCoptim package.
+* **Rosenbrock Function**
 ```{r}
 #Rosenbrock
 ABCoptim_1 <- abc_optim(c(1,2,3), Rosenbrock, lb=-10, ub=10, criter=50, maxCycle=200)
@@ -226,21 +228,21 @@ print(ABCoptim_1)
 plot(ABCoptim_1, main="Rosenbrock")
 ```
 
-* **Sphere**
+* **Sphere Function**
 ```{r}
 #sphere
 ABCoptim_2 <- abc_optim(c(1,2,3), sphere, lb=-10, ub=10, criter=50)
 plot(ABCoptim_2, main="Sphere")
 ```
 
-* **Sum Square**
+* **Sum Square Function**
 ```{r}
 #sum_square
 ABCoptim_3 <- abc_optim(c(1,2,3), sum_sq, lb=-10, ub=10, criter=50)
 plot(ABCoptim_3, main="Sum Sqaure")
 ```
 
-* **Dixon&price**
+* **Dixon&price Function**
 ```{r}
 #dixon&price
 ABCoptim_4 <- abc_optim(c(1,2,3), d_and_p, FoodNumber = 50, lb=-10, ub=10, criter=50)
@@ -263,28 +265,29 @@ plot(ABCoptim_4, main="Dixon&Price")
 require(rgenoud)
 ```
 
-* **Rosenbrock**
+#### Optimising above function using rgenoud package.
+* **Rosenbrock Function**
 ```{r}
 #Rosenbrock
 genoud_1 <- genoud(fn=Rosenbrock, pop.size=2000, nvars=4, starting.values=matrix(1:4, ncol=4), wait.generation=20, print.level=0 )
 genoud_1
 ```
 
-* **Sphere**
+* **Sphere Function**
 ```{r}
 #sphere
 genoud_2 <- genoud(fn=sphere, pop.size=2000, nvars=4, starting.values=matrix(1:4, ncol=4), wait.generation=20, print.level=0)
 genoud_2
 ```
 
-* **Sum Square**
+* **Sum Square Function**
 ```{r}
 #sum_square
 genoud_3 <- genoud(fn=sum_sq, pop.size=2000, nvars=4, starting.values=matrix(1:4, ncol=4), wait.generation=20, print.level=0)
 genoud_3
 ```
 
-* **Dixon&price**
+* **Dixon&price Function**
 ```{r}
 #dixon&price
 genoud_4 <- genoud(fn=d_and_p, pop.size=2000, nvars=4,starting.values=matrix(1:4, ncol=4), wait.generation=20, print.level=0 )
@@ -298,6 +301,45 @@ genoud_4
 * **genoud** function even works for problems for which the derivative information does not exist. 
 
 * The function allows users to set arguments such as **pop.size**(i.e initial population size that the function will use for implementing evolutionary algorithm), **max.generation** and **wait.generation**(i.e limit on the number of generation that would take place while execution of evolutionary algorithm) so that optimization results in more accurate solution.
+
+---
+
+### 4. Genalg
+
+```{r}
+#loading package genalg
+require(genalg)
+```
+
+#### Optimising Rosenbrock function using genalg package.
+```{r}
+
+#function to display the progress of the optimisation process.
+monitor <- function(obj) {
+     # plot the population
+     xlim = c(obj$stringMin[1], obj$stringMax[1]);
+     ylim = c(obj$stringMin[2], obj$stringMax[2]);
+     iteration_num = obj$iter
+     lbl = paste("Iteration Number: ", obj$iter);
+     if(((iteration_num)%%10)==1 || iteration_num==100){
+       plot(obj$population, xlim=xlim, ylim=ylim,
+          xlab="x", ylab="y", main=lbl);
+     }
+}
+
+#Optimising Rosenbrock Function 
+rbga.results1 = rbga(c(-10, -10), c(10, 10), monitorFunc=monitor, evalFunc=Rosenbrock, mutationChance=0.001)
+```
+
+#### Why genalg?
+
+* **genalg** is an optimization package which is based on genetic algorithm. It provides **rbga** function for the optimization purpose. We can set different parameters such as **mutationChance**, **popSize**, **suggestions** and **iters** according to the need of the problem to be optimised.
+
+* **genalg** package has a **plot** function also which can be used to visualize the optimization process. 
+
+* In addition to the above specified parameters, **rbga** also allows users to monitor the optimization process as it progresses by providing a monitor function to the parameter **monitorFunc**. As in the above R code I have provided a monitor function which plots the population after every (10*x + 1)th iteration of the optimization. 
+
+* Also it can be seen from above plots that optimization using rbga function is quite effective. That is the optimized populations were obtained within less number of iterations and are accurate also.
 
 ---
 
